# CV-web

./: .gitignore  CV-web.cabal  README.md  server-config.sample
cv-adapters/: cv-adapters.cabal
cv-adapters/Heh/: CVWeb.hs
src/: CVWeb.hs  Config.hs  Main.hs  ProtectHandlers.hs  Source.hs  tester.hs
web/: EventSource.js  display.tpl  editor.js  editor.tpl  index.html  upload.html  viewer.tpl
web/css/: cvweb.css  editor.css
web/css/theme/: glossweb.css
web/demos/: empty.hs  get.hs  lena_misc.hs  min.hs  pixelwise.hs
web/js/: codemirror-compressed.js  editor.js
