Name:                CV-web
Version:             0.1
Synopsis:            Web interface for CV library.
Description:         CV stands for computer vision library wrapping OpenCV
  and providing other tools. This is originally inspired and adapted
  from cdsmith's gloss-web that provides Gloss graphic library's tools to
  be easily tested at http://dac4.designacourse.com:8000/ .

  Aim of this project is to offer similar interface for computer vision.
License:             MIT
Author:              Heikki Salo
Maintainer:          heikki.ao.salo@iki.fi
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable cv-web
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    CV >= 0.3.5.3,
    bytestring >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    heist == 0.8.0,
    xmlhtml == 0.1.7,
    base64-bytestring >= 0.1.1.1,
    text >= 0.11.2.0,
    filepath >= 1.3.0.0,
    containers,
    directory,
    aeson,
    unix,
    ghc >= 7.4.1,
    ghc-paths,
    cv-adapters

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2


